# Waldo

waldo-client/: .gitignore  .testr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt
waldo-client/waldoc/: __init__.py  batch.py  client.py  consts.py  shell.py
waldo-client/waldoc/tests/: test_client.py
