[metadata]
name = waldo-client
summary = Command-line tool to interact with the Waldo API
description-file =
    README.md
author = Caleb Groom
author-email = cgroom@rackspace.com
home-page = https://github.com/rackerlabs/waldo-client
classifier =
    Environment :: Rackspace Cloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[files]
packages =
    waldoc

[entry_points]
console_scripts =
    waldo = waldoc.shell:main
